# PredictionArbitrage

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/: config.py  db.py  main.py
backend/alerts/: discord.py
backend/api/routes/: health.py  markets.py  opportunities.py
backend/collectors/: base.py  ingest.py  kalshi.py  manifold.py  polymarket.py  predictit.py  test_live.py
backend/engine/: arbitrage.py  fees.py  scheduler.py
backend/matching/: matcher.py  normalizer.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial.py  002_add_expires_at.py
backend/models/: market.py  opportunity.py
deploy/: predarb.service  setup-lxc.sh
docs/: PRD.md
frontend/: index.html  package-lock.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: FilterBar.tsx  OpportunityTable.tsx  PlatformBadge.tsx  PlatformStatus.tsx  StatusDot.tsx
frontend/src/hooks/: useApi.ts
frontend/src/pages/: Dashboard.tsx  Markets.tsx
skill/: SKILL.md
