[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "predarb"
version = "0.1.0"
description = "Self-hosted prediction market arbitrage scanner"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    
    # HTTP client
    "httpx>=0.28.0",
    
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    
    # Cache
    "redis>=5.2.0",
    
    # Scheduling
    "apscheduler>=3.10.4",
    
    # Data & matching
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "scikit-learn>=1.6.0",    # TF-IDF vectorizer + cosine similarity
    "nltk>=3.9.0",            # Stemming, stop words
    
    # Utilities
    "python-dotenv>=1.0.0",
    "orjson>=3.10.0",         # Fast JSON for API responses
    "tenacity>=9.0.0",        # Retry logic for API calls
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.34.0",   # Mock httpx calls
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

# Phase 2: NLP-enhanced matching
nlp = [
    "spacy>=3.8.0",           # Entity extraction
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ASYNC"]
ignore = ["B008"]  # Depends() in FastAPI route defaults is standard pattern

[tool.ruff.lint.isort]
known-first-party = ["backend"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]